--- a/src/index.css
+++ b/src/index.css
@@ -851,7 +851,7 @@ textarea::placeholder {
     width: 15rem;
   }
   .content-img {
-    margin-left: -9rem;
+    margin-left: -10rem;
   }
   .right-block-women-card {
     padding: 4.5rem;
@@ -912,6 +912,7 @@ textarea::placeholder {
   }
   .aboutus-description {
     font-size: 1.6rem;
+    margin-top: 2rem;
   }
   .aboutus-container {
     padding: 0rem 5rem;
@@ -925,7 +926,7 @@ textarea::placeholder {
     width: 3.4rem;
   }
   html {
-    font-weight: 500;
+    font-size: 45%;
   }
   .hero-slider-grid {
     grid-template-columns: 1fr;
@@ -934,11 +935,11 @@ textarea::placeholder {
     height: 100%;
   }
   .content-hero {
-    height: 90vh;
+    height: 70vh;
   }
   .content-img {
     height: 10vh;
-    margin-bottom: 30rem;
+    margin-bottom: 15rem;
   }
   .content-img {
     margin-left: 0;
@@ -1021,7 +1022,6 @@ textarea::placeholder {
   .grid-50-50 {
     padding: 1rem;
   }
-
   .menu-grid {
     gap: 4rem;
     margin-top: 2rem;
